test/error/ast/CaseElseAlreadyExist.mod
MODULE CaseElseAlreadyExist;
VAR x: INTEGER;
BEGIN
  CASE x OF
    0: ;
  ELSE
    ;
  ELSE
    ;
  END;
END CaseElseAlreadyExist.
